# schedule-bots

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/: alembic.ini  app.py  managers.py
src/alembic/: env.py
src/alembic/versions/: b0ae5912ba94_first_implementation.py
src/api/: exceptions.py  routers.py  schemas.py  utils.py
src/api/university/: routers.py  schemas.py
src/be/: alembic.ini  app.py  managers.py  utils.py
src/be/alembic/: env.py
src/be/alembic/versions/: 926c35a2bbad_init.py  cc3fd66c6360_first_implementation.py
src/be/api/: exceptions.py  routers.py  schemas.py
src/be/db/: __init__.py  core.py  models.py
src/be/scripts/: fill_db.py
src/db/: core.py  models.py
src/db/models/: group.py  institute.py  schedule.py  university.py
src/fe/common/: constants.py  dialogs.py  keyboards.py  payloads.py
src/fe/vk/: bot.py  config.py  utils.py
src/fe/vk/handlers/: __init__.py  about.py  choice_course.py  choice_group.py  choice_institute.py  choice_university.py  display_schedule.py  error_report.py  start.py
src/managers/: group.py  institute.py  lesson.py  schedule.py  university.py
