[tool.poetry]
name = "schedule-bots"
version = "0.1.0"
description = ""
authors = ["Artem Pelevin <artempelevin@list.ru>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "~3.11"
fastapi = "~0.109.1"
uvicorn = {extras = ["standart"], version = "~0.27.0"}
pydantic = "^2.6.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"  # TODO: почему `alembic` не подцепляет автоматом?


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
ruff = "^0.2.0"


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["F", "E", "I"]


[tool.mypy]
ignore_missing_imports = true
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
